k8s/pod-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app-b
  labels:
    app: flask-app
spec:
  containers:
    - name: flask-app
      image: awan/flask-app:0.1.0
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 8080
          protocol: TCP
